seaqt/QtGui/gen_qaccessible.h

typedef struct QAccessibleInterface QAccessibleInterface;
typedef struct QAccessibleTableModelChangeEvent QAccessibleTableModelChangeEvent;
typedef struct QAccessibleTextUpdateEvent QAccessibleTextUpdateEvent;
typedef struct QAccessibleValueChangeEvent QAccessibleValueChangeEvent;
typedef struct QObject QObject;
typedef struct QVariant QVariant;
typedef struct VirtualQAccessibleTextRemoveEvent VirtualQAccessibleTextRemoveEvent;
typedef struct QAccessibleTextRemoveEvent_VTable{
	void (*destructor)(VirtualQAccessibleTextRemoveEvent* self);
	QAccessibleInterface* (*accessibleInterface)(const VirtualQAccessibleTextRemoveEvent* self);
}QAccessibleTextRemoveEvent_VTable;
VirtualQAccessibleTextRemoveEvent* QAccessibleTextRemoveEvent_new(const QAccessibleTextRemoveEvent_VTable* vtbl, size_t vdata, QObject* obj, int position, struct seaqt_string text);
VirtualQAccessibleTextRemoveEvent* QAccessibleTextRemoveEvent_new2(const QAccessibleTextRemoveEvent_VTable* vtbl, size_t vdata, QAccessibleInterface* iface, int position, struct seaqt_string text);
QAccessibleInterface* QAccessibleTextRemoveEvent_virtualbase_accessibleInterface(const VirtualQAccessibleTextRemoveEvent* self);
typedef struct VirtualQAccessibleTextUpdateEvent VirtualQAccessibleTextUpdateEvent;
typedef struct QAccessibleTextUpdateEvent_VTable{
	void (*destructor)(VirtualQAccessibleTextUpdateEvent* self);
	QAccessibleInterface* (*accessibleInterface)(const VirtualQAccessibleTextUpdateEvent* self);
}QAccessibleTextUpdateEvent_VTable;
void* QAccessibleTextUpdateEvent_vdata(VirtualQAccessibleTextUpdateEvent* self);
VirtualQAccessibleTextUpdateEvent* vdata_QAccessibleTextUpdateEvent(void* vdata);
VirtualQAccessibleTextUpdateEvent* QAccessibleTextUpdateEvent_new(const QAccessibleTextUpdateEvent_VTable* vtbl, size_t vdata, QObject* obj, int position, struct seaqt_string oldText, struct seaqt_string text);
VirtualQAccessibleTextUpdateEvent* QAccessibleTextUpdateEvent_new2(const QAccessibleTextUpdateEvent_VTable* vtbl, size_t vdata, QAccessibleInterface* iface, int position, struct seaqt_string oldText, struct seaqt_string text);
struct seaqt_string QAccessibleTextUpdateEvent_textRemoved(const QAccessibleTextUpdateEvent* self);
struct seaqt_string QAccessibleTextUpdateEvent_textInserted(const QAccessibleTextUpdateEvent* self);
int QAccessibleTextUpdateEvent_changePosition(const QAccessibleTextUpdateEvent* self);
QAccessibleInterface* QAccessibleTextUpdateEvent_virtualbase_accessibleInterface(const VirtualQAccessibleTextUpdateEvent* self);
typedef struct VirtualQAccessibleValueChangeEvent VirtualQAccessibleValueChangeEvent;
typedef struct QAccessibleValueChangeEvent_VTable{
	void (*destructor)(VirtualQAccessibleValueChangeEvent* self);
	QAccessibleInterface* (*accessibleInterface)(const VirtualQAccessibleValueChangeEvent* self);
}QAccessibleValueChangeEvent_VTable;
void* QAccessibleValueChangeEvent_vdata(VirtualQAccessibleValueChangeEvent* self);
VirtualQAccessibleValueChangeEvent* vdata_QAccessibleValueChangeEvent(void* vdata);
VirtualQAccessibleValueChangeEvent* QAccessibleValueChangeEvent_new(const QAccessibleValueChangeEvent_VTable* vtbl, size_t vdata, QObject* obj, QVariant* val);
VirtualQAccessibleValueChangeEvent* QAccessibleValueChangeEvent_new2(const QAccessibleValueChangeEvent_VTable* vtbl, size_t vdata, QAccessibleInterface* iface, QVariant* val);
void QAccessibleValueChangeEvent_setValue(QAccessibleValueChangeEvent* self, QVariant* val);
QVariant* QAccessibleValueChangeEvent_value(const QAccessibleValueChangeEvent* self);
QAccessibleInterface* QAccessibleValueChangeEvent_virtualbase_accessibleInterface(const VirtualQAccessibleValueChangeEvent* self);
typedef struct VirtualQAccessibleTableModelChangeEvent VirtualQAccessibleTableModelChangeEvent;
void* QAccessibleTableModelChangeEvent_vdata(VirtualQAccessibleTableModelChangeEvent* self);
VirtualQAccessibleTableModelChangeEvent* vdata_QAccessibleTableModelChangeEvent(void* vdata);
void QAccessibleTableModelChangeEvent_setModelChangeType(QAccessibleTableModelChangeEvent* self, int changeType);
int QAccessibleTableModelChangeEvent_modelChangeType(const QAccessibleTableModelChangeEvent* self);
void QAccessibleTableModelChangeEvent_setFirstRow(QAccessibleTableModelChangeEvent* self, int row);
void QAccessibleTableModelChangeEvent_setFirstColumn(QAccessibleTableModelChangeEvent* self, int col);
void QAccessibleTableModelChangeEvent_setLastRow(QAccessibleTableModelChangeEvent* self, int row);
void QAccessibleTableModelChangeEvent_setLastColumn(QAccessibleTableModelChangeEvent* self, int col);
int QAccessibleTableModelChangeEvent_firstRow(const QAccessibleTableModelChangeEvent* self);
int QAccessibleTableModelChangeEvent_firstColumn(const QAccessibleTableModelChangeEvent* self);
int QAccessibleTableModelChangeEvent_lastRow(const QAccessibleTableModelChangeEvent* self);
int QAccessibleTableModelChangeEvent_lastColumn(const QAccessibleTableModelChangeEvent* self);