seaqt/QtGui/gen_qaccessible.nim


type cQAccessibleTextRemoveEventVTable {.pure.} = object
  destructor*: proc(self: pointer) {.cdecl, raises:[], gcsafe.}
  accessibleInterface*: proc(self: pointer): pointer {.cdecl, raises: [], gcsafe.}
proc fcQAccessibleTextRemoveEvent_virtualbase_accessibleInterface(self: pointer): pointer {.importc: "QAccessibleTextRemoveEvent_virtualbase_accessibleInterface".}
proc fcQAccessibleTextRemoveEvent_new(vtbl: pointer, vdata: csize_t, obj: pointer, position: cint, text: struct_seaqt_string): ptr cQAccessibleTextRemoveEvent {.importc: "QAccessibleTextRemoveEvent_new".}
proc fcQAccessibleTextRemoveEvent_new2(vtbl: pointer, vdata: csize_t, iface: pointer, position: cint, text: struct_seaqt_string): ptr cQAccessibleTextRemoveEvent {.importc: "QAccessibleTextRemoveEvent_new2".}
proc fcQAccessibleTextUpdateEvent_textRemoved(self: pointer): struct_seaqt_string {.importc: "QAccessibleTextUpdateEvent_textRemoved".}
proc fcQAccessibleTextUpdateEvent_textInserted(self: pointer): struct_seaqt_string {.importc: "QAccessibleTextUpdateEvent_textInserted".}
proc fcQAccessibleTextUpdateEvent_changePosition(self: pointer): cint {.importc: "QAccessibleTextUpdateEvent_changePosition".}
proc fcQAccessibleTextUpdateEvent_vdata(self: pointer): ptr pointer {.importc: "QAccessibleTextUpdateEvent_vdata".}
proc fvdata_cQAccessibleTextUpdateEvent(self: pointer): pointer {.importc: "vdata_QAccessibleTextUpdateEvent".}

type cQAccessibleTextUpdateEventVTable {.pure.} = object
  destructor*: proc(self: pointer) {.cdecl, raises:[], gcsafe.}
  accessibleInterface*: proc(self: pointer): pointer {.cdecl, raises: [], gcsafe.}
proc fcQAccessibleTextUpdateEvent_virtualbase_accessibleInterface(self: pointer): pointer {.importc: "QAccessibleTextUpdateEvent_virtualbase_accessibleInterface".}
proc fcQAccessibleTextUpdateEvent_new(vtbl: pointer, vdata: csize_t, obj: pointer, position: cint, oldText: struct_seaqt_string, text: struct_seaqt_string): ptr cQAccessibleTextUpdateEvent {.importc: "QAccessibleTextUpdateEvent_new".}
proc fcQAccessibleTextUpdateEvent_new2(vtbl: pointer, vdata: csize_t, iface: pointer, position: cint, oldText: struct_seaqt_string, text: struct_seaqt_string): ptr cQAccessibleTextUpdateEvent {.importc: "QAccessibleTextUpdateEvent_new2".}
proc fcQAccessibleValueChangeEvent_setValue(self: pointer, val: pointer): void {.importc: "QAccessibleValueChangeEvent_setValue".}
proc fcQAccessibleValueChangeEvent_value(self: pointer): pointer {.importc: "QAccessibleValueChangeEvent_value".}
proc fcQAccessibleValueChangeEvent_vdata(self: pointer): ptr pointer {.importc: "QAccessibleValueChangeEvent_vdata".}
proc fvdata_cQAccessibleValueChangeEvent(self: pointer): pointer {.importc: "vdata_QAccessibleValueChangeEvent".}

type cQAccessibleValueChangeEventVTable {.pure.} = object
  destructor*: proc(self: pointer) {.cdecl, raises:[], gcsafe.}
  accessibleInterface*: proc(self: pointer): pointer {.cdecl, raises: [], gcsafe.}
proc fcQAccessibleValueChangeEvent_virtualbase_accessibleInterface(self: pointer): pointer {.importc: "QAccessibleValueChangeEvent_virtualbase_accessibleInterface".}
proc fcQAccessibleValueChangeEvent_new(vtbl: pointer, vdata: csize_t, obj: pointer, val: pointer): ptr cQAccessibleValueChangeEvent {.importc: "QAccessibleValueChangeEvent_new".}
proc fcQAccessibleValueChangeEvent_new2(vtbl: pointer, vdata: csize_t, iface: pointer, val: pointer): ptr cQAccessibleValueChangeEvent {.importc: "QAccessibleValueChangeEvent_new2".}
proc fcQAccessibleTableModelChangeEvent_setModelChangeType(self: pointer, changeType: cint): void {.importc: "QAccessibleTableModelChangeEvent_setModelChangeType".}
proc fcQAccessibleTableModelChangeEvent_modelChangeType(self: pointer): cint {.importc: "QAccessibleTableModelChangeEvent_modelChangeType".}
proc fcQAccessibleTableModelChangeEvent_setFirstRow(self: pointer, row: cint): void {.importc: "QAccessibleTableModelChangeEvent_setFirstRow".}
proc fcQAccessibleTableModelChangeEvent_setFirstColumn(self: pointer, col: cint): void {.importc: "QAccessibleTableModelChangeEvent_setFirstColumn".}
proc fcQAccessibleTableModelChangeEvent_setLastRow(self: pointer, row: cint): void {.importc: "QAccessibleTableModelChangeEvent_setLastRow".}
proc fcQAccessibleTableModelChangeEvent_setLastColumn(self: pointer, col: cint): void {.importc: "QAccessibleTableModelChangeEvent_setLastColumn".}
proc fcQAccessibleTableModelChangeEvent_firstRow(self: pointer): cint {.importc: "QAccessibleTableModelChangeEvent_firstRow".}
proc fcQAccessibleTableModelChangeEvent_firstColumn(self: pointer): cint {.importc: "QAccessibleTableModelChangeEvent_firstColumn".}
proc fcQAccessibleTableModelChangeEvent_lastRow(self: pointer): cint {.importc: "QAccessibleTableModelChangeEvent_lastRow".}
proc fcQAccessibleTableModelChangeEvent_lastColumn(self: pointer): cint {.importc: "QAccessibleTableModelChangeEvent_lastColumn".}
proc fcQAccessibleTableModelChangeEvent_vdata(self: pointer): ptr pointer {.importc: "QAccessibleTableModelChangeEvent_vdata".}
proc fvdata_cQAccessibleTableModelChangeEvent(self: pointer): pointer {.importc: "vdata_QAccessibleTableModelChangeEvent".}
